# about_svelte

./: .env.example  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
lastfm-server/: Cargo.toml
lastfm-server/src/: main.rs
src/: app.css  app.html
src/lib/: art-data.ts  bibliography.ts  manifest.js  masonry.ts  photography-data.ts  photography-exif.ts  photography-list.ts  posts-data.ts  projects-data.ts  raf-observer.ts  utils.ts  writings-data.ts
src/lib/components/: ArtBibliography.svelte  ArtExternalLinks.svelte  ArtFootnotePanel.svelte  ArtInfobox.svelte  Lightbox.svelte  Navbar.svelte  PostContent.svelte  PostLayout.svelte  WritingLayout.svelte
src/lib/stores/: theme.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/art/: +page.server.ts  +page.svelte
src/routes/books/: +page.svelte
src/routes/films/: +page.svelte
src/routes/photography/: +page.svelte
src/routes/post/: [name]
src/routes/post-viewer/: +page.server.ts  +page.svelte
src/routes/post/[name]/: +page.server.ts  +page.svelte
src/routes/post/asic/: +page.md
src/routes/post/carel-fabritius/: +page.md
src/routes/post/early-computing/: +page.md
src/routes/posts/: +page.server.ts  +page.svelte
src/routes/projects/: +page.svelte
src/routes/writings/: +page.svelte
static/: Gnossienne.opus  sitemap.xml
static/posts/: asic.md  carel-fabritius.md  early-computing.md  fpga.md  history-of-palestine.md  hover-states.md  manifest.json  risc-v.md  sacred-ordinary.md
(+21 files in other folders)
